name:                chem-formula
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/KommuSoft/chem-formula#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          hapytexeu+gh@gmail.com
copyright:           2020 Willem Van Onsem
category:            science
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Chemistry.Element
      Chemistry.Formula
  build-depends:
      base >= 4.7 && < 5
    , dimensional >=1.3
    , QuickCheck >=2.13 && <2.14
    , text >=1.1 && <1.3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hapytex/chem-formula
